059_put_together/grade.txt
Grading at 02/19/2018:19:40:46.948181
For commit ID a45b07d5c94e0de5b72d03667fda0defce7b865c
Attempting to compile:
rm -f  outname.o  counts.o  main.o  kv.o count_values *~
gcc -c -Wall -Werror -std=gnu99 -pedantic -ggdb3 outname.c
gcc -c -Wall -Werror -std=gnu99 -pedantic -ggdb3 counts.c
counts.c: In function ‘freeCounts’:
counts.c:70:10: error: passing argument 1 of ‘free’ discards ‘const’ qualifier from pointer target type [-Werror=discarded-qualifiers]
     free(c->stringCounts[i].stringVal);
          ^
In file included from counts.c:2:0:
/usr/include/stdlib.h:483:13: note: expected ‘void *’ but argument is of type ‘const char *’
 extern void free (void *__ptr) __THROW;
             ^
cc1: all warnings being treated as errors
Makefile:10: recipe for target 'counts.o' failed
make: *** [counts.o] Error 1
The code did not compile! Please try git add . to push all files in your working directory 

Overall Grade: F
